sshme-in/storage/influxdb/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: influx-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - influx.sshme.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influx-influxdb
          port: 8086
        - name: influx-influxdb
          port: 8088
